Added Algolia Search (#5524)
-Added Algolia Search Box :

<img width="707" alt="Screenshot 2024-05-22 at 10 05 13"
src="https://github.com/twentyhq/twenty/assets/102751374/d26f9748-2a80-4690-88ca-16b078c52915">

-Added Algolia Search Bar:

<img width="294" alt="Screenshot 2024-05-22 at 10 05 56"
src="https://github.com/twentyhq/twenty/assets/102751374/ad503894-4ae1-41e4-bd4b-6241f7679142">

---------

Co-authored-by: Félix Malfait <felix.malfait@gmail.com>

--- a/packages/twenty-website/src/content/user-guide/api-webhooks.mdx
+++ b/packages/twenty-website/src/content/user-guide/api-webhooks.mdx
@@ -26,7 +26,7 @@ Since your API key gives access to sensitive information, you shouldn't share it
 <div style={{padding:'70.59% 0 0 0', position:'relative', margin: '32px 0px 0px' }}>
   <iframe 
     src="https://player.vimeo.com/video/928786722?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
@@ -62,7 +62,7 @@ For instance, a webhook can alert your system in real-time when someone creates 
 <div style={{padding:'70.59% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/928786708?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
