--- a/packages/twenty-website/src/content/user-guide/create-workspace.mdx
+++ b/packages/twenty-website/src/content/user-guide/create-workspace.mdx
@@ -14,7 +14,7 @@ image: /images/user-guide/create-workspace/workspace-cover.png
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/927066829?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
