--- a/packages/twenty-website/src/content/user-guide/fields.mdx
+++ b/packages/twenty-website/src/content/user-guide/fields.mdx
@@ -41,7 +41,7 @@ Your newly created field is now available within the application's fields. To di
 <div style={{padding:'71.15% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/927628219?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
