--- a/packages/twenty-website/src/content/user-guide/import-export-data.mdx
+++ b/packages/twenty-website/src/content/user-guide/import-export-data.mdx
@@ -26,7 +26,7 @@ To export data from an object:
 <div style={{padding:'71.24% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/926226303?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
