--- a/packages/twenty-website/src/content/user-guide/integrations.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations.mdx
@@ -24,7 +24,7 @@ Sync Twenty with 3000+ apps using <ArticleLink href="https://zapier.com/apps/twe
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/927913866?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
