--- a/packages/twenty-website/src/content/user-guide/kanban-views.mdx
+++ b/packages/twenty-website/src/content/user-guide/kanban-views.mdx
@@ -16,7 +16,7 @@ Kanban views visually map out process flows, where each column stands for a dist
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/927888627?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
@@ -43,7 +43,7 @@ To add a stage, access the Select Field Settings by navigating to Settings > Dat
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/927890428?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
