--- a/packages/twenty-website/src/content/user-guide/notes.mdx
+++ b/packages/twenty-website/src/content/user-guide/notes.mdx
@@ -32,7 +32,7 @@ You can also change the background color and text color of each block to highlig
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
     src="https://player.vimeo.com/video/927896302?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
-    frameborder="0" 
+    frameBorder="0" 
     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
     style={{
       position:'absolute',
