--- a/packages/twenty-website/src/content/releases/0.12.0.mdx
+++ b/packages/twenty-website/src/content/releases/0.12.0.mdx
@@ -20,3 +20,9 @@ Implemented skeleton loading to improve user experience by displaying placeholde
 Introduced a new Link Field type to add and manage one or several external URLs on any object. Available in custom objects starting today.
 
 ![](/images/releases/0.12/0.12-link-field.png)
+
+# Data Model Diagram
+
+Introduced a "Data Model Diagram" feature that allows users to visualize the relationships between different objects within the CRM.
+
+![](/images/releases/0.12/0.12-database-diagram.png)
