5078 ability to invite team members (#5750)
## Added features
- update team member setting page
- add a section to send invitation by email
- add a new invitation email
- update email font to 'Trebuchet MS' as Google Inter font is not
working, we need to use a web safe font
https://templates.mailchimp.com/design/typography/

## Demo

https://github.com/twentyhq/twenty/assets/29927851/c731d883-1599-4281-87e3-0671f36994ae

## Invitation Email

![image](https://github.com/twentyhq/twenty/assets/29927851/d569fc64-fa0c-4769-a3dd-1193a12b495c)

--- a/packages/twenty-docs/docs/start/self-hosting/self-hosting.mdx
+++ b/packages/twenty-docs/docs/start/self-hosting/self-hosting.mdx
@@ -116,9 +116,9 @@ yarn command:prod cron:messaging:message-list-fetch
 
   You will need to provision an [App Password](https://support.google.com/accounts/answer/185833).
   - EMAIL_SMTP_HOST=smtp.gmail.com
-  - EMAIL_SERVER_PORT=465
-  - EMAIL_SERVER_USER=gmail_email_address
-  - EMAIL_SERVER_PASSWORD='gmail_app_password'
+  - EMAIL_SMTP_PORT=465
+  - EMAIL_SMTP_USER=gmail_email_address
+  - EMAIL_SMTP_PASSWORD='gmail_app_password'
 
   </TabItem>
 
@@ -126,9 +126,9 @@ yarn command:prod cron:messaging:message-list-fetch
 
     Keep in mind that if you have 2FA enabled, you will need to provision an [App Password](https://support.microsoft.com/en-us/account-billing/manage-app-passwords-for-two-step-verification-d6dc8c6d-4bf7-4851-ad95-6d07799387e9).
     - EMAIL_SMTP_HOST=smtp.office365.com
-    - EMAIL_SERVER_PORT=587
-    - EMAIL_SERVER_USER=office365_email_address
-    - EMAIL_SERVER_PASSWORD='office365_password'
+    - EMAIL_SMTP_PORT=587
+    - EMAIL_SMTP_USER=office365_email_address
+    - EMAIL_SMTP_PASSWORD='office365_password'
 
   </TabItem>
 
@@ -138,8 +138,8 @@ yarn command:prod cron:messaging:message-list-fetch
     - Run the smtp4dev image: `docker run --rm -it -p 8090:80 -p 2525:25 rnwood/smtp4dev`
     - Access the smtp4dev ui here: [http://localhost:8090](http://localhost:8090)
     - Set the following env variables:
-      - EMAIL_SERVER_HOST=localhost
-      - EMAIL_SERVER_PORT=2525
+      - EMAIL_SMTP_HOST=localhost
+      - EMAIL_SMTP_PORT=2525
 
   </TabItem>
 
@@ -218,4 +218,3 @@ yarn command:prod cron:messaging:message-list-fetch
     ['CAPTCHA_SITE_KEY', '', 'The captcha site key'],
     ['CAPTCHA_SECRET_KEY', '', 'The captcha secret key'],
 ]}></OptionTable>
-
