--- a/packages/twenty-website/src/content/user-guide/getting-started/what-is-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/what-is-twenty.mdx
@@ -12,23 +12,23 @@ Twenty is the leading open-source CRM, crafted by hundreds of contributors to su
 
 ### Main Features
 
-**Contact Management:** Efficiently store and manage customer data. [Learn more](/user-guide/objects).
+**Contact Management:** Efficiently store and manage customer data. [Learn more](/user-guide/section/objects/standard-objects).
 
-**Custom Objects:** Create and customize objects to fit your business needs. [Details](/user-guide/objects).
+**Custom Objects:** Create and customize objects to fit your business needs. [Details](/user-guide/section/objects/standard-objects).
 
-**Custom Fields:** Tailor data fields to capture and organize information specific to your operations. [Understand more](/user-guide/fields).
+**Custom Fields:** Tailor data fields to capture and organize information specific to your operations. [Understand more](/user-guide/section/objects/fields).
 
-**Kanban & Table Views:** Optimize your workflow with flexible [Table Views](/user-guide/table-views) and [Kanban Views](/user-guide/kanban-views).
+**Kanban & Table Views:** Optimize your workflow with flexible [Table Views](/user-guide/section/objects/table-views) and [Kanban Views](/user-guide/section/objects/kanban-views).
 
-**Pipeline Visualization:** Get a clear view of your processes with customizable views. [Explore views](/user-guide/views-sort-and-filter).
+**Pipeline Visualization:** Get a clear view of your processes with customizable views. [Explore views](/user-guide/section/objects/views-sort-filter).
 
-**Email Integration:** View the emails of a specific customer or company within your workspace. [Integrate now](/user-guide/emails).
+**Email Integration:** View the emails of a specific customer or company within your workspace. [Integrate now](/user-guide/section/functions/emails).
 
-**Notes:** Create detailed notes for each record to share knowledge more effectively. [Add notes](/user-guide/notes).
+**Notes:** Create detailed notes for each record to share knowledge more effectively. [Add notes](/user-guide/section/functions/notes).
 
-**Tasks:** Schedule tasks to track customer interactions. [See how](/user-guide/tasks).
+**Tasks:** Schedule tasks to track customer interactions. [See how](/user-guide/section/functions/tasks).
 
-**API & Webhooks:** Connect to other apps and automate workflows with API and Webhooks. [Start integrating](/user-guide/integrations).
+**API & Webhooks:** Connect to other apps and automate workflows with API and Webhooks. [Start integrating](/user-guide/section/functions/integrations).
 
 ### Benefits
 
