Allow s3 credentials via env (#6066)
closes #5072

--- a/packages/twenty-website/src/content/developers/self-hosting/self-hosting-var.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/self-hosting-var.mdx
@@ -142,6 +142,8 @@ yarn command:prod cron:calendar:google-calendar-sync
     ['STORAGE_S3_REGION', '', 'Storage Region'],
     ['STORAGE_S3_NAME', '', 'Bucket Name'],
     ['STORAGE_S3_ENDPOINT', '', 'Use if a different Endpoint is needed (for example Google)'],
+    ['STORAGE_S3_ACCESS_KEY_ID', '', 'Optional depending on the authentication method'],
+    ['STORAGE_S3_SECRET_ACCESS_KEY', '', 'Optional depending on the authentication method'],
     ['STORAGE_LOCAL_PATH', '.local-storage', 'data path (local storage)'],
     ]}></ArticleTable>
 
