--- a/packages/twenty-website/src/content/developers/self-hosting/cloud-providers.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/cloud-providers.mdx
@@ -6,20 +6,30 @@ image: /images/user-guide/notes/notes_header.png
 
 <ArticleWarning>
 This document is maintained by the community. It might contain issues.
-Feel free to join our discord if you need assistance.
 </ArticleWarning>
 
 
+## Kubernetes via Terraform and Manifests
+
+Community-led documentation for Kubernetes deployment is available (here)[https://github.com/twentyhq/twenty/tree/main/packages/twenty-docker/k8s]
+
 ## Render
+
+Community-led, might not be up to date
 
 [![Deploy to Render](https://render.com/images/deploy-to-render-button.svg)](https://render.com/deploy?repo=https://github.com/twentyhq/twenty)
 
-## RepoCloud
+
+## RepoCloud 
+
+Community-led, might not be up to date
 
 [![Deploy on RepoCloud](https://d16t0pc4846x52.cloudfront.net/deploy.png)](https://repocloud.io/details/?app_id=259)
 
 
 ## Azure Container Apps
+
+Community-led, might not be up to date
 
 ### About
 
