--- a/packages/twenty-website/src/content/developers/self-hosting/upgrade-guide.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/upgrade-guide.mdx
@@ -30,17 +30,22 @@ yarn command:prod workspace:sync-metadata -f
 yarn command:prod upgrade-0.22
 ```
 
+The `yarn database:migrate:prod` command will apply the migrations to the Database.  
+The `yarn command:prod workspace:sync-metadata -f` command will sync the definition of standard objects to the metadata tables and apply to required migrations to existing workspaces.  
+The `yarn command:prod upgrade-0.22` command will apply specific data transformations to adapt to the new object defaultRequestInstrumentationOptions.
+
 ## v0.22.0 to v0.23.0
 
 Run the following commands:
 
 ```
 yarn database:migrate:prod 
+yarn command:prod workspace:sync-metadata -f 
 yarn command:prod upgrade-0.23
 ```
 
 The `yarn database:migrate:prod` command will apply the migrations to the Database.  
-The `yarn command:prod workspace:sync-metadata -f` command will sync the definition of standard objects to the metadata tables and apply to required migrations to existing workspaces.  
-The `yarn command:prod upgrade-0.22` command will apply specific data transformations to adapt to the new object defaultRequestInstrumentationOptions.
+The `yarn command:prod workspace:sync-metadata -f` command will sync the definition of standard objects to the metadata tables and apply to required migrations to existing workspaces. We're introducing Task and Notes as standard object and will be deprecating the Activity object.
+The `yarn command:prod upgrade-0.23` takes care of the data migration, including transferring activities to tasks/notes.
 
 <ArticleEditContent></ArticleEditContent>
