--- a/packages/twenty-website/src/content/developers/self-hosting/self-hosting-var.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/self-hosting-var.mdx
@@ -36,6 +36,8 @@ yarn command:prod cron:calendar:calendar-event-list-fetch
     ['PG_SSL_ALLOW_SELF_SIGNED', 'false', 'Allow self signed certificates'],
     ['REDIS_HOST', '127.0.0.1', 'Redis connection host'],
     ['REDIS_PORT', '6379', 'Redis connection port'],
+    ['REDIS_USERNAME', 'redis_username', 'Redis connection username'],
+    ['REDIS_PASSWORD', 'redis_pwd', 'Redis connection password'],
     ['FRONT_BASE_URL', 'http://localhost:3001', 'Url to the hosted frontend'],
     ['SERVER_URL', 'http://localhost:3000', 'Url to the hosted server'],
     ['PORT', '3000', 'Port'],
