Improve snackbar and fix sentry (#7181)
- Improve snackbar to enable displaying multi-line message (so far we
only displayed the first few words which was very frustrating)

- Followup on previous issue to enable tim@apple.dev on the demo
workspace (prefilled automatically)

- Fix sentry tracing which had been broken when migrating from v7 to v8

--- a/packages/twenty-website/src/content/user-guide/getting-started/what-is-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/what-is-twenty.mdx
@@ -49,7 +49,7 @@ Internet connection (Offline mode isn't yet supported).
 If you wish to try Twenty before creating your own account, go to demo.twenty.com and login with the following credentials:
 
 
-`email: noah@demo.dev`\
+`email: tim@apple.dev`\
 `password: Applecar2025`
 
 ## Vision
