Typo in local-setup.mdx (#7647)

--- a/packages/twenty-website/src/content/developers/local-setup.mdx
+++ b/packages/twenty-website/src/content/developers/local-setup.mdx
@@ -252,7 +252,7 @@ Make sure to run yarn in the root directory and then run `npx nx server:dev twen
 
 #### Lint on Save not working
 
-This should work out of the box with the eslint extension installed. If this doens't work try adding this to your vscode setting (on the dev container scope):
+This should work out of the box with the eslint extension installed. If this doesn't work try adding this to your vscode setting (on the dev container scope):
 
 ```
 "editor.codeActionsOnSave": {
