--- a/packages/twenty-website/src/content/developers/self-hosting/docker-compose.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/docker-compose.mdx
@@ -4,6 +4,10 @@ icon: TbBrandDocker
 image: /images/user-guide/objects/objects.png
 ---
 
+<ArticleWarning>
+Docker containers are for production hosting or self-hosting, for the contribution please check the [Local Setup](https://twenty.com/developers/local-setup).
+</ArticleWarning>
+
 ## Overview
 
 This guide provides step-by-step instructions to install and configure the Twenty application using Docker Compose. The aim is to make the process straightforward and prevent common pitfalls that could break your setup.
