Start twenty-server:worker when npx nx start (#7820)
- start the worker service when launching `npx nx start`
- update documentation

--- a/packages/twenty-website/src/content/developers/local-setup.mdx
+++ b/packages/twenty-website/src/content/developers/local-setup.mdx
@@ -225,13 +225,14 @@ Setup your database with the following command:
 npx nx database:reset twenty-server
 ```
 
-Start the server and the frontend:
+Start the server, the worker and the frontend services:
 ```bash
 npx nx start twenty-server
+npx nx worker twenty-server
 npx nx start twenty-front
 ```
 
-Alternatively, you can start both applications at once:
+Alternatively, you can start all services at once:
 ```bash
 npx nx start
 ```
