Typo fixes in docs (#8115)

--- a/packages/twenty-website/src/content/developers/backend-development/server-commands.mdx
+++ b/packages/twenty-website/src/content/developers/backend-development/server-commands.mdx
@@ -6,7 +6,7 @@ image: /images/user-guide/kanban-views/kanban.png
 
 ## Useful commands
 
-These commands should be exectued from packages/twenty-server folder.
+These commands should be executed from packages/twenty-server folder.
 From any other folder you can run `npx nx <command>` twenty-server.
 
 ### First time setup
